fix the column alignment

--- a/main.css
+++ b/main.css
@@ -112,7 +112,7 @@ p {
 
 .right {
     text-align: right;
-    font-weight: 700;
+    font-weight: 600;
     white-space: normal;
     word-break: break-word;
 }
